[package]
name = "biber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
regex = "1.5.6"
unicase = "2.6.0"
unicode-normalization = "0.1.19"
