[package]
name = "biber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
base62 = "2.0.0"
bimap = "0.6.2"
clap = { version = "3.2.5", features = ["derive"] }
isbn2 = "0.4.0"
itertools = "0.10.3"
language-tags = "0.3.2"
lazy-regex = "2.2.2"
log = "0.4.17"
once_cell = "1.12.0"
phf = { version = "0.10.1", features = ["macros"] }
regex = "1.5.6"
roxmltree = "0.14.1"
unicase = "2.6.0"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
xmltree = { version = "0.10.3", features = ["attribute-order"] }
